--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sanitize.css": "^13.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -22,7 +23,7 @@
     "eslint": "^8",
     "eslint-config-next": "^13.5.6",
     "eslint-config-prettier": "^9.0.0",
-    "typescript": "^5",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "typescript": "^5"
   }
 }
