--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json}'"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.0.0",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
