--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.0.0",
+    "@vanilla-extract/css": "^1.13.0",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
@@ -21,6 +22,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vanilla-extract/next-plugin": "^2.3.1",
     "eslint": "^8",
     "eslint-config-next": "^13.5.6",
     "eslint-config-prettier": "^9.0.0",
