--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.0.0",
     "@vanilla-extract/css": "^1.13.0",
+    "base64url": "^3.0.1",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
