--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vanilla-extract/css": "^1.13.0",
     "base64url": "^3.0.1",
     "dayjs": "^1.11.10",
+    "microcms-js-sdk": "^2.7.0",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
