--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json}'"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.0.0",
+    "@tanstack/react-query": "^4.35.7",
     "@vanilla-extract/css": "^1.13.0",
     "base64url": "^3.0.1",
     "dayjs": "^1.11.10",
@@ -19,12 +19,14 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-infinite-scroller": "^1.2.6",
     "sanitize.css": "^13.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-infinite-scroller": "^1.2.4",
     "@vanilla-extract/next-plugin": "^2.3.1",
     "eslint": "^8",
     "eslint-config-next": "^13.5.6",
