--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-infinite-scroller": "^1.2.6",
+    "react-loader-spinner": "^5.4.5",
     "sanitize.css": "^13.0.0"
   },
   "devDependencies": {
