feat: ログインページのログイン実装

--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "@vanilla-extract/css": "^1.13.0",
     "base64url": "^3.0.1",
     "dayjs": "^1.11.10",
+    "firebase": "^10.5.2",
+    "jwt-decode": "^4.0.0",
     "microcms-js-sdk": "^2.7.0",
     "next": "13.5.6",
     "react": "^18",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18",
+    "react-hook-form": "^7.48.2",
     "react-infinite-scroller": "^1.2.6",
     "react-loader-spinner": "^5.4.5",
+    "react-router-dom": "^6.18.0",
     "sanitize.css": "^13.0.0"
   },
   "devDependencies": {
