--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.18.0",
     "react-transition-group": "^4.4.5",
     "sanitize.css": "^13.0.0",
+    "twitter-api-v2": "^1.15.2",
     "twitter-text": "^3.1.0"
   },
   "devDependencies": {
