--- a/.github/workflows/check-lint.yml
+++ b/.github/workflows/check-lint.yml
@@ -3,7 +3,7 @@ name: Deployable Check
 on:
   pull_request:
     branches:
-      - main
+      - develop
 jobs:
   build:
     runs-on: ubuntu-latest
