--- a/.github/workflows/check-lint.yml
+++ b/.github/workflows/check-lint.yml
@@ -29,8 +29,9 @@ jobs:
         run: yarn lint
       - name: build check
         env:
-          PUBLIC_END_POINT: ${{ secrets.PUBLIC_API_KEY }}
-          PUBLIC_SERVICE_DOMAIN: ${{ secrets.PUBLIC_SERVICE_DOMAIN }}
-          PUBLIC_API_KEY: ${{ secrets.PUBLIC_API_KEY }}
-          PUBLIC_GA_ID: ${{ secrets.NEXT_PUBLIC_GA_ID}}
+          NEXT_PUBLIC_MICROCMS_DOMAIN: ${{ secrets.NEXT_PUBLIC_MICROCMS_DOMAIN }}
+          NEXT_PUBLIC_MICROCMS_KEY: ${{ secrets.NEXT_PUBLIC_MICROCMS_KEY }}
+          NEXT_PUBLIC_FIREBASE_API_KEY: ${{ secrets.NEXT_PUBLIC_FIREBASE_API_KEY }}
+          NEXT_PUBLIC_TWITTER_APP_KEY: ${{ secrets.NEXT_PUBLIC_TWITTER_APP_KEY }}
+          NEXT_PUBLIC_TWITTER_APP_SECRET: ${{ secrets.NEXT_PUBLIC_TWITTER_APP_SECRET }}
         run: yarn build
