--- a/.github/workflows/check-lighthouse-score.yml
+++ b/.github/workflows/check-lighthouse-score.yml
@@ -1,9 +1,16 @@
 name: Vercel Preview URL Lighthouse Audit
 
+permissions:
+  actions: write
+  checks: write
+  contents: write
+  deployments: write
+  pull-requests: write
+  statuses: write
+
 on:
-  pull_request:
-    branches:
-      - develop
+  issue_comment:
+    types: [edited]
 
 jobs:
   generate_lighthouse_audit:
@@ -12,7 +19,7 @@ jobs:
     steps:
       - name: Add comment to PR
         id: loading_comment_to_pr
-        uses: marocchino/sticky-pull-request-comment@v1
+        uses: marocchino/sticky-pull-request-comment@v2
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           number: ${{ github.event.issue.number }}
@@ -21,7 +28,7 @@ jobs:
             Running Lighthouse audit...
       - name: Capture Vercel preview URL
         id: vercel_preview_url
-        uses: aaron-binary/vercel-preview-url-action@v0.0.3
+        uses: binary-com/vercel-preview-url-action@v1.0.5
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/checkout@v2
@@ -41,9 +48,12 @@ jobs:
           script: |
             const result = ${{ steps.lighthouse_audit.outputs.manifest }}[0].summary
             const links = ${{ steps.lighthouse_audit.outputs.links }}
+
             const formatResult = (res) => Math.round((res * 100))
             Object.keys(result).forEach(key => result[key] = formatResult(result[key]))
+
             const score = res => res >= 90 ? '🟢' : res >= 50 ? '🟠' : '🔴'
+
             const comment = [
                 `⚡️ [Lighthouse report](${Object.values(links)[0]}) for the changes in this PR:`,
                 '| Category | Score |',
@@ -56,6 +66,7 @@ jobs:
                 ' ',
                 `*Lighthouse ran on [${Object.keys(links)[0]}](${Object.keys(links)[0]})*`
             ].join('\n')
+
             core.setOutput("comment", comment);
       - name: Add comment to PR
         id: comment_to_pr
