--- a/.github/workflows/check-lint.yml
+++ b/.github/workflows/check-lint.yml
@@ -18,7 +18,7 @@ jobs:
         id: yarn-cache
         with:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}-20231123
           restore-keys: |
             ${{ runner.os }}-yarn-20231123
       - name: Install Dependencies
