--- a/.github/workflows/check-lint.yml
+++ b/.github/workflows/check-lint.yml
@@ -32,6 +32,6 @@ jobs:
           MICROCMS_DOMAIN: ${{ secrets.MICROCMS_DOMAIN }}
           MICROCMS_KEY: ${{ secrets.MICROCMS_KEY }}
           FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
-          NEXT_PUBLIC_TWITTER_APP_KEY: ${{ secrets.NEXT_PUBLIC_TWITTER_APP_KEY }}
-          NEXT_PUBLIC_TWITTER_APP_SECRET: ${{ secrets.NEXT_PUBLIC_TWITTER_APP_SECRET }}
+          TWITTER_APP_KEY: ${{ secrets.TWITTER_APP_KEY }}
+          TWITTER_APP_SECRET: ${{ secrets.TWITTER_APP_SECRET }}
         run: yarn build
