fix: vercel botが投稿した時のみ発火する様変更

--- a/.github/workflows/check-lighthouse-score-by-preview.yml
+++ b/.github/workflows/check-lighthouse-score-by-preview.yml
@@ -8,6 +8,7 @@ jobs:
   lighthouse:
     runs-on: ubuntu-latest
     name: Lighthouse分析と結果コメント投稿
+    if: github.event.issue.pull_request && github.event.comment.user.login == 'vercel[bot]'
     steps:
       - name: プレビューURLを取得
         id: capture_preview_url
