--- a/.github/workflows/check-lighthouse-score-by-preview.yml
+++ b/.github/workflows/check-lighthouse-score-by-preview.yml
@@ -21,7 +21,12 @@ jobs:
         run: |
           ORIGINAL_URL=${{ steps.capture_preview_url.outputs.vercel_preview_url }}
           CLEANED_URL=$(echo $ORIGINAL_URL | sed -e 's/vercel.live\/open-feedback\///' -e 's/\?via=pr-comment-visit-preview-link&passThrough=1//')
-          echo "::set-output name=value::${CLEANED_URL}"
+          echo "CLEANED_URL=${CLEANED_URL}" >> $GITHUB_ENV
+
+      - name: CLEANED_URLのデバッグ
+        run: |
+          CHECK_URL=${{ env.CLEANED_URL }}
+          echo $CHECK_URL
 
       - name: チェックアウト
         uses: actions/checkout@v3
@@ -41,7 +46,7 @@ jobs:
         uses: treosh/lighthouse-ci-action@v10
         with:
           urls: |
-            ${{ steps.clean_url.outputs.value }}
+            ${{ env.CLEANED_URL }}
           uploadArtifacts: true
           temporaryPublicStorage: true
 
