--- a/.github/workflows/check-lighthouse-score-by-preview.yml
+++ b/.github/workflows/check-lighthouse-score-by-preview.yml
@@ -21,12 +21,14 @@ jobs:
         run: |
           ORIGINAL_URL=${{ steps.capture_preview_url.outputs.vercel_preview_url }}
           CLEANED_URL=$(echo $ORIGINAL_URL | sed -e 's/vercel.live\/open-feedback\///' -e 's/\?via=pr-comment-visit-preview-link&passThrough=1//')
+          echo $CLEANED_URL
           echo "CLEANED_URL=${CLEANED_URL}" >> $GITHUB_ENV
 
       - name: CLEANED_URLのデバッグ
         run: |
           CHECK_URL=${{ env.CLEANED_URL }}
           echo $CHECK_URL
+          echo $CLEANED_URL
 
       - name: チェックアウト
         uses: actions/checkout@v3
@@ -46,7 +48,7 @@ jobs:
         uses: treosh/lighthouse-ci-action@v10
         with:
           urls: |
-            ${{ env.CLEANED_URL }}
+            $CLEANED_URL
           uploadArtifacts: true
           temporaryPublicStorage: true
 
