--- a/.github/workflows/check-lighthouse-score-by-preview.yml
+++ b/.github/workflows/check-lighthouse-score-by-preview.yml
@@ -21,17 +21,13 @@ jobs:
         run: |
           ORIGINAL_URL=${{ steps.capture_preview_url.outputs.vercel_preview_url }}
           CLEANED_URL=$(echo $ORIGINAL_URL | sed -e 's/vercel.live\/open-feedback\///' -e 's/\?via=pr-comment-visit-preview-link&passThrough=1//')
-          echo "ORIGINAL_URL=${ORIGINAL_URL}" >> $GITHUB_OUTPUT
-          echo "CLEANED_URL=${CLEANED_URL}" >> $GITHUB_OUTPUT
-          echo "OTHER_URL=$(echo $ORIGINAL_URL | sed -e 's/vercel.live\/open-feedback\///' -e 's/\?via=pr-comment-visit-preview-link&passThrough=1//')" >> $GITHUB_OUTPUT
+          echo "ORIGINAL_URL=${ORIGINAL_URL}" >> $GITHUB_ENV
+          echo "CLEANED_URL=${CLEANED_URL}" >> $GITHUB_ENV
 
       - name: CLEANED_URLのデバッグ
         run: |
-          CHECK_URL=${{ steps.clean_url.outputs.CLEANED_URL }}
-          CHECK_URL_ORIGINAL=${{ steps.clean_url.outputs.ORIGINAL_URL }}
-          echo $CHECK_URL
-          echo $CHECK_URL_ORIGINAL
-          echo $CLEANED_URL
+          echo "Original URL: $ORIGINAL_URL"
+          echo "Cleaned URL: $CLEANED_URL"
 
       - name: チェックアウト
         uses: actions/checkout@v3
@@ -51,8 +47,7 @@ jobs:
         uses: treosh/lighthouse-ci-action@v10
         with:
           urls: |
-            ${{ steps.clean_url.outputs.CLEANED_URL }}
-            ${{ steps.clean_url.outputs.ORIGINAL_URL }}
+            ${{ env.CLEANED_URL }}
           uploadArtifacts: true
           temporaryPublicStorage: true
 
