--- a/.github/workflows/check-lighthouse-score-by-preview.yml
+++ b/.github/workflows/check-lighthouse-score-by-preview.yml
@@ -17,12 +17,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: 不要なURL部分を削除
-        id: clean_url
         run: |
           ORIGINAL_URL=${{ steps.capture_preview_url.outputs.vercel_preview_url }}
           CLEANED_URL=$(echo $ORIGINAL_URL | sed -e 's/vercel.live\/open-feedback\///' -e 's/\?via=pr-comment-visit-preview-link&passThrough=1//')
-          echo "ORIGINAL_URL=${ORIGINAL_URL}" >> $GITHUB_ENV
-          echo "CLEANED_URL=${CLEANED_URL}" >> $GITHUB_ENV
+          echo "ORIGINAL_URL=$ORIGINAL_URL" >> $GITHUB_ENV
+          echo "CLEANED_URL=$CLEANED_URL" >> $GITHUB_ENV
 
       - name: CLEANED_URLのデバッグ
         run: |
