--- a/.github/workflows/check-lighthouse-score-by-preview.yml
+++ b/.github/workflows/check-lighthouse-score-by-preview.yml
@@ -8,28 +8,22 @@ jobs:
   lighthouse:
     runs-on: ubuntu-latest
     name: Lighthouse分析と結果コメント投稿
-    if: github.event.issue.pull_request && github.event.comment.user.login == 'vercel[bot]'
     steps:
+      - name: チェックアウト
+        uses: actions/checkout@v3
+
       - name: プレビューURLを取得
         id: capture_preview_url
         uses: aaimio/vercel-preview-url-action@v2.2.0
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: 不要なURL部分を削除
+      - name: リダイレクト後のURLを取得
+        id: get_redirected_url
         run: |
-          ORIGINAL_URL=${{ steps.capture_preview_url.outputs.vercel_preview_url }}
-          CLEANED_URL=$(echo $ORIGINAL_URL | sed -e 's/vercel.live\/open-feedback\///' -e 's/\?via=pr-comment-visit-preview-link&passThrough=1//')
-          echo "ORIGINAL_URL=$ORIGINAL_URL" >> $GITHUB_ENV
-          echo "CLEANED_URL=$CLEANED_URL" >> $GITHUB_ENV
-
-      - name: CLEANED_URLのデバッグ
-        run: |
-          echo "Original URL: $ORIGINAL_URL"
-          echo "Cleaned URL: $CLEANED_URL"
-
-      - name: チェックアウト
-        uses: actions/checkout@v3
+          PREVIEW_URL=${{ steps.capture_preview_url.outputs.vercel_preview_url }}
+          REDIRECTED_URL=$(curl -Ls -o /dev/null -w %{url_effective} $PREVIEW_URL)
+          echo "REDIRECTED_URL=$REDIRECTED_URL" >> "$GITHUB_OUTPUT"
 
       - name: コメントを追加
         id: loading_comment_to_pr
@@ -44,9 +38,11 @@ jobs:
       - name: Lighthouseでページを分析
         id: lighthouse_audit
         uses: treosh/lighthouse-ci-action@v10
+        env:
+          REDIRECTED_URL: ${{ steps.get_redirected_url.outputs.REDIRECTED_URL }}
         with:
           urls: |
-            ${{ env.CLEANED_URL }}
+            $REDIRECTED_URL
           uploadArtifacts: true
           temporaryPublicStorage: true
 
