--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "base64url": "^3.0.1",
     "dayjs": "^1.11.10",
     "firebase": "^10.5.2",
+    "framer-motion": "^10.16.5",
     "jwt-decode": "^4.0.0",
     "microcms-js-sdk": "^2.7.0",
     "next": "13.5.6",
