--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json}'"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.35.7",
+    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query-devtools": "^4.36.1",
     "@vanilla-extract/css": "^1.13.0",
     "@vanilla-extract/dynamic": "^2.1.0",
     "aws-sdk": "^2.1499.0",
@@ -47,6 +48,7 @@
     "eslint": "^8",
     "eslint-config-next": "^13.5.6",
     "eslint-config-prettier": "^9.0.0",
+    "patch-package": "^8.0.0",
     "prettier": "^3.0.3",
     "typescript": "^5"
   }
