--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query-devtools": "^4.36.1",
     "@vanilla-extract/css": "^1.13.0",
     "@vanilla-extract/dynamic": "^2.1.0",
+    "@vercel/analytics": "^1.1.1",
     "aws-sdk": "^2.1499.0",
     "base64url": "^3.0.1",
     "dayjs": "^1.11.10",
