fix: そもそもキャッシュしないように修正

--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,11 @@
 {
-  "regions": ["hnd1"]
+  "regions": ["hnd1"],
+  "routes": [
+    {
+      "src": "/api/replies/unanswered",
+      "headers": {
+        "Cache-Control": "no-cache, no-store, must-revalidate"
+      }
+    }
+  ]
 }
